--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,7 +14,7 @@
 
     <%- include("../partials/navbar") %>
 
-    <main class="container mt-4">
+    <main class="container mt-4 px-5">
         <%- body %>
     </main>
 
