--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 py-3">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 py-3 sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand fw-bold" href="/">YelpCamp</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
