--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -7,7 +7,7 @@
     <%= campground.location %>
 </h2>
 
-<img src="<%= campground.image %>" width="500">
+<img src="<%= campground.image %>">
 
 <p>
     <%= campground.description %>
