--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,21 +1,41 @@
 <% layout("layouts/boilerplate") %>
 
-<h1>Add Campground</h1>
+<div class="row">
+    <h1 class="text-center">New Campground</h1>
+    <div class="col-6 offset-3">        
+        <form action="/campgrounds" method="POST">
+        
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input class="form-control" type="text" name="campground[title]" id="title">
+            </div>
+        
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input class="form-control" type="text" name="campground[location]" id="location">
+            </div>
 
-<form action="/campgrounds" method="POST">
+            <div class="mb-3">
+                <label class="form-label" for="price">Price</label>
+                <div class="input-group">
+                    <span class="input-group-text" id="price-label">$</span>
+                    <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00">
+                </div>
+            </div>
 
-    <div>
-        <label for="title">Title</label>
-        <input type="text" name="campground[title]" id="title">
+            <div class="mb-3">
+                <label class="form-label" for="image">Image URL</label>
+                <input class="form-control" type="text" name="campground[image]" id="image">
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" name="campground[description]" id="description"></textarea>
+            </div>
+
+            <button class="btn btn-success me-2">Add Campground</button>
+            <a class="btn btn-secondary" href="/campgrounds">Back to Campgrounds</a>
+        
+        </form>
     </div>
-
-    <div>
-        <label for="location">Location</label>
-        <input type="text" name="campground[location]" id="location">
-    </div>
-
-    <button>Add Campground</button>
-
-</form>
-
-<a href="/campgrounds">All Campgrounds</a>
+</div>
