--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,21 +1,45 @@
 <% layout("layouts/boilerplate") %>
 
-<h1>Edit Campground</h1>
-
-<form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
-
+<div class="container small-container mb-5 px-5 py-4 rounded bg-white shadow">
+    <h1 class="text-center fs-3 fw-semibold mb-3">Edit Campground</h1>
+    <hr>
     <div>
-        <label for="title">Title</label>
-        <input type="text" name="campground[title]" id="title" value="<%= campground.title %>">
+        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+    
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input class="form-control" type="text" name="campground[title]" id="title" value="<%= campground.title %>">
+            </div>
+    
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input class="form-control" type="text" name="campground[location]" id="location"
+                    value="<%= campground.location %>">
+            </div>
+    
+            <div class="mb-3">
+                <label class="form-label" for="price">Price</label>
+                <div class="input-group">
+                    <span class="input-group-text" id="price-label">$</span>
+                    <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00"
+                        value="<%= campground.price %>">
+                </div>
+            </div>
+    
+            <div class="mb-3">
+                <label class="form-label" for="image">Image URL</label>
+                <input class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image %>">
+            </div>
+    
+            <div class="mb-4">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" name="campground[description]"
+                    id="description"><%= campground.description %></textarea>
+            </div>
+    
+            <button class="btn btn-primary me-2 text-white">Update Campground</button>
+            <a class="btn btn-secondary" href="/campgrounds/<%= campground._id %>">Back to Campground</a>
+    
+        </form>
     </div>
-
-    <div>
-        <label for="location">Location</label>
-        <input type="text" name="campground[location]" id="location" value="<%= campground.location %>">
-    </div>
-
-    <button>Update Campground</button>
-
-</form>
-
-<a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
+</div>
