--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,30 +1,26 @@
 <% layout("layouts/boilerplate") %>
 
-<h1>
-    <%= campground.title %>
-</h1>
-<h2>
-    <%= campground.location %>
-</h2>
-
-<img src="<%= campground.image %>">
-
-<p>
-    <%= campground.description %>
-</p>
-
-<p>
-    <button>
-        <a href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-    </button>
-</p>
-
-<p>
-<form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-    <button>Delete</button>
-</form>
-</p>
-
-<footer>
-    <a href="/campgrounds">All Campgrounds</a>
-</footer>
+<div class="row">
+    <div class="col-6 offset-3">
+        <div class="card mb-5 rounded shadow">
+            <img src="<%= campground.image %>" class="card-img-top">
+            <div class="card-body">
+                <h5 class="card-title fw-semibold"><%= campground.title %></h5>
+                <p class="card-text"><%= campground.description %></p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item text-muted"><i class="fa-solid fa-location-dot"></i> <%= campground.location %></li>
+                <li class="list-group-item">$<%= campground.price %>/night</li>
+            </ul>
+            <div class="card-body">
+                <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-primary me-2"><i class="fa-solid fa-pen"></i> Edit</a>
+                <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                    <button class="card-link btn btn-danger"><i class="fa-solid fa-trash"></i> Delete</button>
+                </form>
+            </div>
+            <div class="card-footer pb-3 d-flex">
+                <a class="text-decoration-none" href="/campgrounds"><i class="fa-solid fa-arrow-left"></i> All Campgrounds</a>
+            </div>
+        </div>
+    </div>
+</div>
