--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 py-3 sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 py-3 sticky-top shadow">
     <div class="container-fluid">
-        <a class="navbar-brand fw-bold" href="/">YelpCamp</a>
+        <a class="navbar-brand fw-bold" href="/"><i class="fa-solid fa-campground"></i> YelpCamp</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
