--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -24,7 +24,7 @@
 
     <%- include("../partials/navbar") %>
 
-    <main class="container mt-5 px-5">
+    <main class="container mt-5 mb-5 px-5">
         <%- body %>
     </main>
 
