--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,17 +4,21 @@
     <h1 class="text-center fs-3 fw-semibold mb-3">Edit Campground</h1>
     <hr>
     <div>
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form">
     
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" name="campground[title]" id="title" value="<%= campground.title %>">
+                <input class="form-control" type="text" name="campground[title]" id="title" value="<%= campground.title %>" required>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please choose a title</div>
             </div>
     
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
                 <input class="form-control" type="text" name="campground[location]" id="location"
-                    value="<%= campground.location %>">
+                    value="<%= campground.location %>" required>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please choose a location</div>
             </div>
     
             <div class="mb-3">
@@ -22,19 +26,25 @@
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
                     <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00"
-                        value="<%= campground.price %>">
+                        value="<%= campground.price %>" required>
+                    <div class="valid-feedback">Looks good!</div>
+                    <div class="invalid-feedback">Please choose a price</div>
                 </div>
             </div>
     
             <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
-                <input class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image %>">
+                <input class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image %>" required>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please choose an image</div>
             </div>
     
             <div class="mb-4">
                 <label class="form-label" for="description">Description</label>
                 <textarea class="form-control" name="campground[description]"
-                    id="description"><%= campground.description %></textarea>
+                    id="description" required><%= campground.description %></textarea>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please choose a description</div>
             </div>
     
             <button class="btn btn-primary me-2 text-white">Update Campground</button>
