--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -4,34 +4,44 @@
     <h1 class="text-center fs-3 fw-semibold mb-3">New Campground</h1>
     <hr>
     <div>
-        <form action="/campgrounds" method="POST">
+        <form action="/campgrounds" method="POST" novalidate class="validated-form">
     
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" name="campground[title]" id="title">
+                <input class="form-control" type="text" name="campground[title]" id="title" required>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please choose a title</div>
             </div>
     
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" name="campground[location]" id="location">
+                <input class="form-control" type="text" name="campground[location]" id="location" required>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please choose a location</div>
             </div>
     
             <div class="mb-3">
                 <label class="form-label" for="price">Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
-                    <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00">
+                    <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00" required>
+                    <div class="valid-feedback">Looks good!</div>
+                    <div class="invalid-feedback">Please choose a price</div>
                 </div>
             </div>
     
             <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
-                <input class="form-control" type="text" name="campground[image]" id="image">
+                <input class="form-control" type="text" name="campground[image]" id="image" required>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please choose an image</div>
             </div>
     
             <div class="mb-4">
                 <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" name="campground[description]" id="description"></textarea>
+                <textarea class="form-control" name="campground[description]" id="description" required></textarea>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please choose a description</div>
             </div>
     
             <button class="btn btn-success me-2">Add Campground</button>
