--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -23,5 +23,19 @@
                 <a class="text-decoration-none" href="/campgrounds"><i class="fa-solid fa-arrow-left"></i> All Campgrounds</a>
             </div>
         </div>
+
+        <h2>Leave a Review</h2>
+        <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="my-3">
+            <div class="mb-3">
+                <label class="form-label" for="rating">Rating</label>
+                <input class="form-range bg-light p-3 rounded" type="range" min="1" max="5" name="review[rating]" id="rating">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="body">Review</label>
+                <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+            </div>
+            <button class="btn btn-success">Submit</button>
+        </form>
+
     </div>
 </div>
