--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% layout("layouts/boilerplate") %>
 
 <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6 offset-1">
         <div class="card mb-5 rounded shadow">
             <img src="<%= campground.image %>" class="card-img-top">
             <div class="card-body">
@@ -23,28 +23,37 @@
                 <a class="text-decoration-none" href="/campgrounds"><i class="fa-solid fa-arrow-left"></i> All Campgrounds</a>
             </div>
         </div>
+    </div>
 
-        <h2>Leave a Review</h2>
-        <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="my-3 validated-form" novalidate>
-            <div class="mb-3">
-                <label class="form-label" for="rating">Rating</label>
-                <input class="form-range bg-light p-3 rounded" type="range" min="1" max="5" name="review[rating]" id="rating">
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="body">Review</label>
-                <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
-                <div class="valid-feedback">Looks good!</div>
-                <div class="invalid-feedback">Please write a review before submitting</div>
-            </div>
-            <button class="btn btn-success">Submit</button>
-        </form>
-
+    <div class="col-4 ms-5">
+        <div class="bg-white p-4 rounded shadow mb-3">
+            <h2 class="fw-semibold fs-4">Leave a Review</h2>
+            <hr>
+            <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="my-3 validated-form" novalidate>
+                <div class="mb-3">
+                    <label class="form-label" for="rating">Give a rating</label>
+                    <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="body">Write your review</label>
+                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+                    <div class="valid-feedback">Looks good!</div>
+                    <div class="invalid-feedback">Please write a review before submitting</div>
+                </div>
+                <button class="btn btn-success w-100">Submit</button>
+            </form>
+        </div>
+        
         <% for (let review of campground.reviews) { %>
-            <div class="mb-3">
-                <p>Rating: <%= review.rating %></p>
-                <p>Review: <%= review.body %></p>
+            <div class="card mb-3 rounded shadow">
+                <div class="card-body">
+                    <h5 class="card-title fw-semibold">Rating: <%= review.rating %>
+                    </h5>
+                    <hr>
+                    <p class="card-text"><%= review.body %>
+                    </p>
+                </div>
             </div>
-        <% } %>
-
+            <% } %>
     </div>
 </div>
