--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -47,11 +47,13 @@
         <% for (let review of campground.reviews) { %>
             <div class="card mb-3 rounded shadow">
                 <div class="card-body">
-                    <h5 class="card-title fw-semibold">Rating: <%= review.rating %>
-                    </h5>
+                    <h5 class="card-title fw-semibold">Rating: <%= review.rating %></h5>
                     <hr>
-                    <p class="card-text"><%= review.body %>
-                    </p>
+                    <p class="card-text"><%= review.body %></p>
+
+                    <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-sm btn-danger">Delete</button>
+                    </form>
                 </div>
             </div>
             <% } %>
