--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="d-flex justify-content-between align-items-center">
     <h1 class="fw-semibold fs-2"><i class="fa-solid fa-list"></i> All Campgrounds</h1>
-    <a class="btn btn-success" href="/campgrounds/new"><i class="fa-solid fa-plus"></i> Add Campground</a>
+    <a class="btn btn-success shadow" href="/campgrounds/new"><i class="fa-solid fa-plus"></i> Add Campground</a>
 </div>
 
 <hr>
@@ -20,7 +20,7 @@
                     <hr>
                     <p class="card-text"><%= campground.description %></p>
                     <p><small class="text-muted"><i class="fa-solid fa-location-dot"></i> <%= campground.location %></small></p>
-                    <a class="btn btn-primary" href="/campgrounds/<%= campground._id %>">View more <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a class="btn btn-primary shadow" href="/campgrounds/<%= campground._id %>">View more <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
