--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,9 +14,9 @@
                 <li class="list-group-item">$<%= campground.price %>/night</li>
             </ul>
             <div class="card-body">
-                <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-primary me-2"><i class="fa-solid fa-pen"></i> Edit</a>
+                <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-primary me-2 shadow"><i class="fa-solid fa-pen"></i> Edit</a>
                 <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                    <button class="card-link btn btn-danger"><i class="fa-solid fa-trash"></i> Delete</button>
+                    <button class="card-link btn btn-danger shadow"><i class="fa-solid fa-trash"></i> Delete</button>
                 </form>
             </div>
             <div class="card-footer pb-3 d-flex">
@@ -40,19 +40,19 @@
                     <div class="valid-feedback">Looks good!</div>
                     <div class="invalid-feedback">Please write a review before submitting</div>
                 </div>
-                <button class="btn btn-success w-100">Submit</button>
+                <button class="btn btn-success shadow">Submit</button>
             </form>
         </div>
         
         <% for (let review of campground.reviews) { %>
             <div class="card mb-3 rounded shadow">
-                <div class="card-body">
+                <div class="card-body p-4">
                     <h5 class="card-title fw-semibold">Rating: <%= review.rating %></h5>
                     <hr>
                     <p class="card-text"><%= review.body %></p>
 
                     <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-                        <button class="btn btn-sm btn-danger">Delete</button>
+                        <button class="btn btn-sm btn-danger card-link shadow"><i class="fa-solid fa-trash"></i> Delete</button>
                     </form>
                 </div>
             </div>
