--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,3 @@
 <% layout("/layouts/boilerplate") %>
 
-<h1>YelpCamp</h1>
+<h1 class="fw-semibold"><i class="fa-solid fa-campground"></i> YelpCamp</h1>
