added flash messages

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -23,6 +23,7 @@
 <body class="d-flex flex-column vh-100 bg-body-secondary">
 
     <%- include("../partials/navbar") %>
+    <%- include("../partials/flash") %>
 
     <main class="container mt-5 mb-5 px-5">
         <%- body %>
