--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -47,8 +47,8 @@
                 <div class="invalid-feedback">Please choose a description</div>
             </div>
     
-            <button class="btn btn-primary me-2 text-white">Update Campground</button>
-            <a class="btn btn-secondary" href="/campgrounds/<%= campground._id %>">Back to Campground</a>
+            <button class="btn btn-primary me-2 mb-2 text-white">Update Campground</button>
+            <a class="btn btn-secondary mb-2" href="/campgrounds/<%= campground._id %>">Back to Campground</a>
     
         </form>
     </div>
