--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -17,6 +17,12 @@
         .small-container {
             width: 40%;
         }
+
+        @media (max-width: 1000px) {
+            .small-container {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 
