--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -44,8 +44,8 @@
                 <div class="invalid-feedback">Please choose a description</div>
             </div>
     
-            <button class="btn btn-success me-2">Add Campground</button>
-            <a class="btn btn-secondary" href="/campgrounds">Back to Campgrounds</a>
+            <button class="btn btn-success me-2 mb-2">Add Campground</button>
+            <a class="btn btn-secondary mb-2" href="/campgrounds">Back to Campgrounds</a>
     
         </form>
     </div>
