--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% layout("layouts/boilerplate") %>
 
 <div class="row">
-    <div class="col-6 offset-1">
+    <div class="col-md-6 offset-md-1">
         <div class="card mb-5 rounded shadow">
             <img src="<%= campground.image %>" class="card-img-top">
             <div class="card-body">
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="col-4 ms-5">
+    <div class="col-md-4 ms-md-5">
         <div class="bg-white p-4 rounded shadow mb-3">
             <h2 class="fw-semibold fs-4">Leave a Review</h2>
             <hr>
