--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,7 @@
 <% layout("layouts/boilerplate") %>
 
 <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-md-6 offset-md-3">
         <div class="alert alert-danger" role="alert">
             <h4 class="alert-heading"><%= err.name %></h4>
             <hr>
