--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,5 +18,14 @@
                 </li>
             </ul>
         </div>
+
+        <div class="navbar-nav ml-auto">
+            <% if (!currentUser) {%>
+            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" href="/register">Signup</a>
+            <% } else {%>
+            <a class="nav-link" href="/logout">Logout</a>
+            <% }%>
+        </div>
     </div>
 </nav>
