login signup forms styling done

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -18,8 +18,15 @@
             width: 40%;
         }
 
+        .smaller-container {
+            width: 30%;
+        }
+
         @media (max-width: 1000px) {
             .small-container {
+                width: 100%;
+            }
+            .smaller-container {
                 width: 100%;
             }
         }
