--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,29 +1,36 @@
 <% layout("layouts/boilerplate") %>
 
-<h1>Sign up</h1>
+    <div class="container smaller-container mb-5 px-5 py-4 rounded bg-white shadow">
 
-<form action="/register" method="POST" class="validated-form" novalidate>
-    <div class="mb-3">
-        <label class="form-label" for="username">Username</label>
-        <input class="form-control" type="text" name="username" id="username" required>
-        <div class="valid-feedback">Looks good!</div>
-        <div class="invalid-feedback">Please choose a username</div>
+        <h1 class="text-center fs-2 fw-semibold mb-3">Sign up</h1>
+        <hr>
+
+        <form action="/register" method="POST" class="validated-form" novalidate>
+            <div class="mb-3 mt-4">
+                <label class="form-label" for="username">Username</label>
+                <input class="form-control" type="text" name="username" id="username" required>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please choose a username</div>
+            </div>
+
+            <div class="my-4">
+                <label class="form-label" for="email">Email</label>
+                <input class="form-control" type="email" name="email" id="email" required>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please choose a email</div>
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label" for="password">Password</label>
+                <input class="form-control" type="password" name="password" id="password" required>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please choose a password</div>
+            </div>
+
+            <button class="btn btn-success mt-3 mb-4 w-100">Signup</button>
+
+        </form>
+
+        <p class="text-center">Already have an account? <a class="text-decoration-none" href="/login">Login</a></p>
+
     </div>
-
-    <div class="mb-3">
-        <label class="form-label" for="email">Email</label>
-        <input class="form-control" type="email" name="email" id="email" required>
-        <div class="valid-feedback">Looks good!</div>
-        <div class="invalid-feedback">Please choose a email</div>
-    </div>
-
-    <div class="mb-3">
-        <label class="form-label" for="password">Password</label>
-        <input class="form-control" type="password" name="password" id="password" required>
-        <div class="valid-feedback">Looks good!</div>
-        <div class="invalid-feedback">Please choose a password</div>
-    </div>
-
-    <button class="btn btn-success">Signup</button>
-
-</form>
