--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -11,6 +11,7 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><i class="fa-solid fa-location-dot"></i> <%= campground.location %></li>
+                <li class="list-group-item">Submitted by <%= campground.author.username %></li>
                 <li class="list-group-item">$<%= campground.price %>/night</li>
             </ul>
             <div class="card-body">
