--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,12 +14,14 @@
                 <li class="list-group-item">Submitted by <%= campground.author.username %></li>
                 <li class="list-group-item">$<%= campground.price %>/night</li>
             </ul>
-            <div class="card-body">
-                <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-primary me-2 shadow"><i class="fa-solid fa-pen"></i> Edit</a>
-                <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                    <button class="card-link btn btn-danger shadow"><i class="fa-solid fa-trash"></i> Delete</button>
-                </form>
-            </div>
+            <% if (currentUser && campground.author.equals(currentUser._id)) { %>
+                <div class="card-body">
+                    <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-primary me-2 shadow"><i class="fa-solid fa-pen"></i> Edit</a>
+                    <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                        <button class="card-link btn btn-danger shadow"><i class="fa-solid fa-trash"></i> Delete</button>
+                    </form>
+                </div>
+            <% } %>
             <div class="card-footer pb-3 d-flex">
                 <a class="text-decoration-none" href="/campgrounds"><i class="fa-solid fa-arrow-left"></i> All Campgrounds</a>
             </div>
