--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -29,6 +29,7 @@
     </div>
 
     <div class="col-md-4 ms-md-5">
+        <% if (currentUser) { %>
         <div class="bg-white p-4 rounded shadow mb-3">
             <h2 class="fw-semibold fs-4">Leave a Review</h2>
             <hr>
@@ -46,19 +47,21 @@
                 <button class="btn btn-success shadow">Submit</button>
             </form>
         </div>
+        <% } %>
         
-        <% for (let review of campground.reviews) { %>
-            <div class="card mb-3 rounded shadow">
-                <div class="card-body p-4">
-                    <h5 class="card-title fw-semibold">Rating: <%= review.rating %></h5>
-                    <hr>
-                    <p class="card-text"><%= review.body %></p>
+        <div class="card mb-3 p-4 rounded shadow">
+            <h2 class="fw-semibold fs-4">Reviews</h2>
+            <% for (let review of campground.reviews) { %>
+            <div>
+                <hr>
+                <h5 class="fw-semibold">Rating: <%= review.rating %></h5>
+                <p><%= review.body %></p>
 
-                    <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-                        <button class="btn btn-sm btn-danger card-link shadow"><i class="fa-solid fa-trash"></i> Delete</button>
-                    </form>
-                </div>
+                <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                    <button class="btn btn-sm btn-danger card-link shadow mb-3"><i class="fa-solid fa-trash"></i> Delete</button>
+                </form>
             </div>
             <% } %>
+        </div>
     </div>
 </div>
