completed reviews authorization

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -56,11 +56,14 @@
             <div>
                 <hr>
                 <h5 class="fw-semibold">Rating: <%= review.rating %></h5>
+                <p class="text-muted">by <%= review.author.username %></p>
                 <p><%= review.body %></p>
 
+                <% if (currentUser && review.author.equals(currentUser._id)) { %>
                 <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
                     <button class="btn btn-sm btn-danger card-link shadow mb-3"><i class="fa-solid fa-trash"></i> Delete</button>
                 </form>
+                <% } %>
             </div>
             <% } %>
         </div>
