--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,5 +1,7 @@
 <% layout("layouts/boilerplate") %>
 
+<link rel="stylesheet" href="/stylesheets/stars.css">
+
 <div class="row">
     <div class="col-md-6 offset-md-1">
         <div class="card mb-5 rounded shadow">
@@ -34,9 +36,20 @@
             <h2 class="fw-semibold fs-4">Leave a Review</h2>
             <hr>
             <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="my-3 validated-form" novalidate>
-                <div class="mb-3">
-                    <label class="form-label" for="rating">Give a rating</label>
-                    <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+                <div>
+                    <fieldset class="starability-basic">
+                        <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                        <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                        <label for="first-rate1" title="Terrible">1 star</label>
+                        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                        <label for="first-rate2" title="Not good">2 stars</label>
+                        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                        <label for="first-rate3" title="Average">3 stars</label>
+                        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                        <label for="first-rate4" title="Very good">4 stars</label>
+                        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                        <label for="first-rate5" title="Amazing">5 stars</label>
+                    </fieldset>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="body">Write your review</label>
@@ -55,10 +68,13 @@
             <% for (let review of campground.reviews) { %>
             <div>
                 <hr>
-                <h5 class="fw-semibold">Rating: <%= review.rating %></h5>
-                <p class="text-muted">by <%= review.author.username %></p>
+                <h5 class="fw-semibold text-muted ms-1 mt-4 mb-3">
+                    <i class="fa-solid fa-user-circle"></i> <%= review.author.username %>
+                </h5>
+                <p class="starability-result" data-rating="<%= review.rating %>">
+                    Rated: <%= review.rating %> stars
+                </p>
                 <p><%= review.body %></p>
-
                 <% if (currentUser && review.author.equals(currentUser._id)) { %>
                 <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
                     <button class="btn btn-sm btn-danger card-link shadow mb-3"><i class="fa-solid fa-trash"></i> Delete</button>
