feat: image upload

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -4,7 +4,7 @@
     <h1 class="text-center fs-3 fw-semibold mb-3">New Campground</h1>
     <hr>
     <div>
-        <form action="/campgrounds" method="POST" novalidate class="validated-form">
+        <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
     
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
@@ -31,17 +31,15 @@
             </div>
     
             <div class="mb-3">
-                <label class="form-label" for="image">Image URL</label>
-                <input class="form-control" type="text" name="campground[image]" id="image" required>
-                <div class="valid-feedback">Looks good!</div>
-                <div class="invalid-feedback">Please choose an image</div>
-            </div>
-    
-            <div class="mb-4">
                 <label class="form-label" for="description">Description</label>
                 <textarea class="form-control" name="campground[description]" id="description" required></textarea>
                 <div class="valid-feedback">Looks good!</div>
                 <div class="invalid-feedback">Please choose a description</div>
+            </div>
+
+            <div class="mb-4">
+                <label for="formFileMultiple" class="form-label">Upload images</label>
+                <input class="form-control" type="file" name="image" id="image" multiple>
             </div>
     
             <button class="btn btn-success me-2 mb-2">Add Campground</button>
