--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,7 +4,7 @@
     <h1 class="text-center fs-3 fw-semibold mb-3">Edit Campground</h1>
     <hr>
     <div>
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form">
+        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
     
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
@@ -33,18 +33,26 @@
             </div>
     
             <div class="mb-3">
-                <label class="form-label" for="image">Image URL</label>
-                <input class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image %>" required>
-                <div class="valid-feedback">Looks good!</div>
-                <div class="invalid-feedback">Please choose an image</div>
-            </div>
-    
-            <div class="mb-4">
                 <label class="form-label" for="description">Description</label>
                 <textarea class="form-control" name="campground[description]"
                     id="description" required><%= campground.description %></textarea>
                 <div class="valid-feedback">Looks good!</div>
                 <div class="invalid-feedback">Please choose a description</div>
+            </div>
+
+            <div class="mb-3">
+                <label for="formFileMultiple" class="form-label">Add more images</label>
+                <input class="form-control" type="file" name="image" id="image" multiple>
+            </div>
+
+            <div class="mb-3">
+                <% campground.images.forEach(function(img, i) { %>
+                    <img src="<%= img.url %>" class="img-thumbnail" alt="">
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="image-<%= i %>" name="deleteImages[]" value="<%= img.filename %>">
+                        <label class="form-check-label" for="image-<%= i %>">Delete</label>
+                    </div>
+                <% }) %>
             </div>
     
             <button class="btn btn-primary me-2 mb-2 text-white">Update Campground</button>
