--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -12,7 +12,7 @@
     <div class="card mb-2 mt-5 rounded shadow">
         <div class="row">
             <div class="col-md-4">
-                <img src="<%= campground.image %>" class="img-fluid rounded">
+                <img src="<%= campground.images[0].url %>" class="img-fluid rounded">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
