--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,7 +5,27 @@
 <div class="row">
     <div class="col-md-6 offset-md-1">
         <div class="card mb-5 rounded shadow">
-            <img src="<%= campground.image %>" class="card-img-top">
+            <div id="campgroundsCarousel" class="carousel slide">
+                <div class="carousel-inner">
+                    <% campground.images.forEach((img, i)=> { %>
+                        <div class="carousel-item <%= i === 0 ? " active" : "" %>">
+                            <img src="<%= img.url %>" class="d-block w-100 card-img-top" alt="">
+                        </div>
+                    <% }) %>
+                </div>
+            
+                <% if (campground.images.length > 1) { %>
+                <button class="carousel-control-prev" type="button" data-bs-target="#campgroundsCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#campgroundsCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                <% } %>
+            </div>
+
             <div class="card-body">
                 <h5 class="card-title fw-semibold"><%= campground.title %></h5>
                 <hr>
