--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -42,8 +42,8 @@
                 <input class="form-control" type="file" name="image" id="image" multiple>
             </div>
     
-            <button class="btn btn-success me-2 mb-2">Add Campground</button>
-            <a class="btn btn-secondary mb-2" href="/campgrounds">Back to Campgrounds</a>
+            <button class="btn btn-success mb-2 w-100">Add Campground</button>
+            <a class="btn btn-secondary mb-2 w-100" href="/campgrounds">Back to Campgrounds</a>
     
         </form>
     </div>
