--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,11 +1,24 @@
 <% layout("layouts/boilerplate") %>
 
+<style>
+    .carousel-indicators li {
+        text-indent: -9999px;
+        overflow: hidden;
+    }
+</style>
+
 <link rel="stylesheet" href="/stylesheets/stars.css">
 
 <div class="row">
     <div class="col-md-6 offset-md-1">
         <div class="card mb-5 rounded shadow">
             <div id="campgroundsCarousel" class="carousel slide">
+                <ol class="carousel-indicators">
+                    <% campground.images.forEach((img, i)=> { %>
+                        <li data-bs-target="#campgroundsCarousel" data-bs-slide-to="<%= i %>" class="<%= i === 0 ? " active" : "" %>"></li>
+                    <% }) %>
+                </ol>
+
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i)=> { %>
                         <div class="carousel-item <%= i === 0 ? " active" : "" %>">
