--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -12,7 +12,11 @@
     <div class="card mb-2 mt-4 rounded shadow">
         <div class="row">
             <div class="col-md-4">
-                <img src="<%= campground.images[0].url %>" class="img-fluid rounded">
+                <% if (campground.images.length) { %>
+                    <img src="<%= campground.images[0].url %>" class="img-fluid rounded">
+                <% } else { %>
+                    <img src="https://res.cloudinary.com/dwtslthej/image/upload/v1717354604/YelpCamp/default-featured-image.png_vjzli2.jpg" class="img-fluid rounded">
+                <% } %>
             </div>
             <div class="col-md-8">
                 <div class="card-body">
