--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -12,32 +12,38 @@
 <div class="row">
     <div class="col-md-6 offset-md-1">
         <div class="card mb-5 rounded shadow">
-            <div id="campgroundsCarousel" class="carousel slide">
-                <ol class="carousel-indicators">
-                    <% campground.images.forEach((img, i)=> { %>
-                        <li data-bs-target="#campgroundsCarousel" data-bs-slide-to="<%= i %>" class="<%= i === 0 ? " active" : "" %>"></li>
-                    <% }) %>
-                </ol>
-
-                <div class="carousel-inner">
-                    <% campground.images.forEach((img, i)=> { %>
-                        <div class="carousel-item <%= i === 0 ? " active" : "" %>">
-                            <img src="<%= img.url %>" class="d-block w-100 card-img-top" alt="">
-                        </div>
-                    <% }) %>
-                </div>
-            
-                <% if (campground.images.length > 1) { %>
-                <button class="carousel-control-prev" type="button" data-bs-target="#campgroundsCarousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#campgroundsCarousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+            <% if (campground.images.length) { %>
+                <div id="campgroundsCarousel" class="carousel slide">
+                <% if (campground.images.length> 1) { %>
+                    <ol class="carousel-indicators">
+                        <% campground.images.forEach((img, i)=> { %>
+                            <li data-bs-target="#campgroundsCarousel" data-bs-slide-to="<%= i %>" class="<%= i === 0 ? " active" : "" %>"></li>
+                        <% }) %>
+                    </ol>
                 <% } %>
-            </div>
+                
+                <div class="carousel-inner">
+                <% campground.images.forEach((img, i)=> { %>
+                    <div class="carousel-item <%= i === 0 ? " active" : "" %>">
+                        <img src="<%= img.url %>" class="d-block w-100 card-img-top" alt="">
+                    </div>
+                <% }) %>
+                </div>
+                
+                <% if (campground.images.length> 1) { %>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#campgroundsCarousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#campgroundsCarousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                <% } %>
+                </div>
+            <% } else { %>
+                <img src="https://res.cloudinary.com/dwtslthej/image/upload/v1717354604/YelpCamp/default-featured-image.png_vjzli2.jpg" class="card-img-top" alt="">
+            <% } %>
 
             <div class="card-body">
                 <h5 class="card-title fw-semibold"><%= campground.title %></h5>
@@ -64,6 +70,7 @@
     </div>
 
     <div class="col-md-4 ms-md-5">
+        <div id='map' class="rounded shadow mb-5" style='width: 400px; height: 300px;'></div>
         <% if (currentUser) { %>
         <div class="bg-white p-4 rounded shadow mb-3">
             <h2 class="fw-semibold fs-4">Leave a Review</h2>
@@ -119,3 +126,10 @@
         <% } %>
     </div>
 </div>
+
+<script>
+    const mapToken = '<%= process.env.MAPBOX_TOKEN %>';
+    const campground = <%- JSON.stringify(campground) %>;
+</script>
+
+<script src="/js/showPageMap.js"></script>
