--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,8 @@
 <% layout("layouts/boilerplate") %>
 
-<div id="map" class="rounded shadow mb-5" style="width: 100%; height: 400px;"></div>
+<link rel="stylesheet" href="/stylesheets/app.css">
+
+<div id="cluster-map" class="rounded shadow mb-5"></div>
 
 <div class="d-flex justify-content-between align-items-center">
     <h1 class="fw-semibold fs-2"><i class="fa-solid fa-list"></i> All Campgrounds</h1>
