--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -16,6 +16,12 @@ header h3 {
     font-weight: bold;
 }
 
+header div {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+
 .nav-link {
     padding: 0.25rem 0;
     font-weight: 700;
