--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,7 @@
         
     <link crossorigin="anonymous" rel="stylesheet" href="/stylesheets/home.css">
     <link rel="stylesheet" href="/stylesheets/all.min.css">
+    <link rel="stylesheet" href="/stylesheets/app.css">
 </head>
 
 <body class="d-flex text-center text-white bg-dark">
@@ -34,7 +35,7 @@
             <p> Discover and share your favorite campsites from around the world. <br>
                 Join our community of outdoor enthusiasts and find your next adventure.
             </p>
-            <a href="/campgrounds" class="btn btn-lg btn-success fw-bold shadow">Explore
+            <a href="/campgrounds" class="btn btn-lg btn-success fw-bold rounder shadow">Explore
                 Campgrounds <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </main>
 
