--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -17,12 +17,12 @@
     <link crossorigin="anonymous" href='https://api.mapbox.com/mapbox-gl-js/v3.4.0/mapbox-gl.css' rel='stylesheet' />
 </head>
 
-<body class="d-flex flex-column vh-100 bg-body-secondary">
+<body class="d-flex flex-column vh-100">
 
     <%- include("../partials/navbar") %>
     <%- include("../partials/flash") %>
 
-    <main class="container mt-5 mb-5 px-5">
+    <main class="container-fluid mt-4 mb-5 px-5">
         <%- body %>
     </main>
 
