--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,11 +1,11 @@
 #map {
     width: 100%;
-    height: 300px;
+    height: 350px;
 }
 
 #cluster-map {
-    width: 100%;
-    height: 400px;
+    width: 50%;
+    height: 520px;
 }
 
 .carousel-indicators li {
@@ -19,6 +19,55 @@
 
 .smaller-container {
     width: 30%;
+}
+
+.rounder {
+    border-radius: 20px;
+}
+
+.scroll-container {
+    height: 555px;
+    overflow: scroll;
+}
+
+.scroll-container::-webkit-scrollbar {
+    display: none;
+}
+
+.scroll-container {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.index-card {
+    width: 47%;
+}
+
+.card-image {
+    height: 220px;
+    border-radius: 15px 15px 0 0;
+}
+
+.show-page-image {
+    height: 420px;
+}
+
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+
+.image-container img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.checkbox-top-left {
+    position: absolute;
+    top: 5px;
+    left: 20px;
+    z-index: 1;
 }
 
 @media (max-width: 1000px) {
