--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,88 +1,74 @@
 <% layout("layouts/boilerplate") %>
 
-<style>
-    .image-container {
-        position: relative;
-        display: inline-block;
-    }
+<link rel="stylesheet" href="/stylesheets/app.css">
 
-    .image-container img {
-        display: block;
-        width: 100%;
-        height: auto;
-    }
-
-    .checkbox-top-left {
-        position: absolute;
-        top: 5px;
-        left: 20px;
-        z-index: 1;
-    }
-</style>
-
-<div class="container small-container mb-5 px-5 py-4 rounded bg-white shadow">
-    <h1 class="text-center fs-3 fw-semibold mb-3">Edit Campground</h1>
-    <hr>
-    <div>
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
+<div class="container px-5">
+    <div class="container small-container mb-5 px-5 py-4 rounded bg-white shadow">
+        <h1 class="text-center fs-3 fw-semibold mb-3">Edit Campground</h1>
+        <hr>
+        <div>
+            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form"
+                enctype="multipart/form-data">
     
-            <div class="mb-3">
-                <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" name="campground[title]" id="title" value="<%= campground.title %>" required>
-                <div class="valid-feedback">Looks good!</div>
-                <div class="invalid-feedback">Please choose a title</div>
-            </div>
-    
-            <div class="mb-3">
-                <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" name="campground[location]" id="location"
-                    value="<%= campground.location %>" required>
-                <div class="valid-feedback">Looks good!</div>
-                <div class="invalid-feedback">Please choose a location</div>
-            </div>
-    
-            <div class="mb-3">
-                <label class="form-label" for="price">Price</label>
-                <div class="input-group">
-                    <span class="input-group-text" id="price-label">$</span>
-                    <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00"
-                        value="<%= campground.price %>" required>
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title</label>
+                    <input class="form-control" type="text" name="campground[title]" id="title"
+                        value="<%= campground.title %>" required>
                     <div class="valid-feedback">Looks good!</div>
-                    <div class="invalid-feedback">Please choose a price</div>
+                    <div class="invalid-feedback">Please choose a title</div>
                 </div>
-            </div>
     
-            <div class="mb-3">
-                <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" name="campground[description]"
-                    id="description" required><%= campground.description %></textarea>
-                <div class="valid-feedback">Looks good!</div>
-                <div class="invalid-feedback">Please choose a description</div>
-            </div>
-
-            <div class="mb-4">
-                <label for="formFileMultiple" class="form-label">Add more images</label>
-                <input class="form-control" type="file" name="image" id="image" multiple>
-            </div>
-
-            <div class="mb-4">
-                <label class="form-label mb-3">Delete selected images</label><br>
-                <% campground.images.forEach(function(img, i) { %>
-                    <div class="image-container mx-2 mb-2">
-                        <div class="form-check">
-                            <input type="checkbox" class="form-check-input checkbox-top-left" id="image-<%= i %>" name="deleteImages[]"
-                                value="<%= img.filename %>">
-                            <label for="image-<%= i %>">
-                                <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
-                            </label>
-                        </div>
+                <div class="mb-3">
+                    <label class="form-label" for="location">Location</label>
+                    <input class="form-control" type="text" name="campground[location]" id="location"
+                        value="<%= campground.location %>" required>
+                    <div class="valid-feedback">Looks good!</div>
+                    <div class="invalid-feedback">Please choose a location</div>
+                </div>
+    
+                <div class="mb-3">
+                    <label class="form-label" for="price">Price</label>
+                    <div class="input-group">
+                        <span class="input-group-text" id="price-label">$</span>
+                        <input type="text" class="form-control" name="campground[price]" id="price" placeholder="0.00"
+                            value="<%= campground.price %>" required>
+                        <div class="valid-feedback">Looks good!</div>
+                        <div class="invalid-feedback">Please choose a price</div>
                     </div>
-                <% }) %>
-            </div>
+                </div>
     
-            <button class="btn btn-primary mb-2 text-white w-100">Update Campground</button><br>
-            <a class="btn btn-secondary mb-2 w-100" href="/campgrounds/<%= campground._id %>">Back to Campground</a>
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description</label>
+                    <textarea class="form-control" name="campground[description]" id="description"
+                        required><%= campground.description %></textarea>
+                    <div class="valid-feedback">Looks good!</div>
+                    <div class="invalid-feedback">Please choose a description</div>
+                </div>
     
-        </form>
+                <div class="mb-4">
+                    <label for="formFileMultiple" class="form-label">Add more images</label>
+                    <input class="form-control" type="file" name="image" id="image" multiple>
+                </div>
+    
+                <div class="mb-4">
+                    <label class="form-label mb-3">Delete selected images</label><br>
+                    <% campground.images.forEach(function(img, i) { %>
+                        <div class="image-container mx-2 mb-2">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input checkbox-top-left" id="image-<%= i %>"
+                                    name="deleteImages[]" value="<%= img.filename %>">
+                                <label for="image-<%= i %>">
+                                    <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
+                                </label>
+                            </div>
+                        </div>
+                        <% }) %>
+                </div>
+    
+                <button class="btn btn-primary mb-2 text-white w-100">Update Campground</button><br>
+                <a class="btn btn-secondary mb-2 w-100" href="/campgrounds/<%= campground._id %>">Back to Campground</a>
+    
+            </form>
+        </div>
     </div>
 </div>
